2004-09-25 Shane Landrum <epicene@pobox.com>

	* en/Gdk/Drawable.xml
	* en/Gdk/Pixbuf.xml
	* en/Gdk/PixbufAlphaMode.xml
	* en/Gdk/PixbufAniAnim.xml
	* en/Gdk/PixbufAniAnimIter.xml
	* en/Gdk/PixbufAnimation.xml
	* en/Gdk/PixbufAnimationIter.xml: Docs for pixbufs and animations.
	A first pass; see FIXME marks for some API that may need adjustment.
	
2004-09-23 Mike Kestner <mkestner@ximian.com>

	* en/Gtk/Widget.xml : docs for new OnSetScrollAdjustments VM.

2004-09-20 Shane Landrum <epicene@pobox.com>

	* en/Gdk/FilterFunc.xml
	* en/Gdk/Point.xml
	* en/Gdk/Region.xml
	* en/Gdk/Rgb.xml
	* en/Gdk/RgbCmap.xml : Added docs for Gdk classes.
	
2004-09-20 Shane Landrum <epicene@pobox.com>
	
	* en/Gtk/FileSelection.xml
	* en/Gtk/MapEventArgs.xml
	* en/Gtk/ModuleDisplayInitFunc.xml
	* en/Gtk/ModuleInitFunc.xml
	* en/Gtk/MotionNotifyEventArgs.xml
	* en/Gtk/TargetPair.xml
	* en/Gtk/TextCounter.xml
	* en/Gtk/TextPendingScroll.xml
	* en/Gtk/TextUtilCharChosenFunc.xml
	* en/Gtk/TextWindowType.xml
	* en/Gtk/ThreadNotify.xml
	* en/Gtk/ToggleSizeAllocatedArgs.xml
	* en/Gtk/ToggleSizeRequestedArgs.xml
	* en/Gtk/Widget.xml : Added and updated docs.
	
2004-09-20 Shane Landrum <epicene@pobox.com>

	* en/Gdk/Window.xml : Added docs from GDK source.
	
2004-09-13 Shane Landrum <epicene@pobox.com>

	* en/Gtk/Accelerator.xml
	* en/Gtk/Arg.xml
	* en/Gtk/CallbackInvoker.xml
	* en/Gtk/CellRendererState.xml
	* en/Gtk/ColorSelectionButton.xml
	* en/Gtk/Combo.xml
	* en/Gtk/Container.xml
	* en/Gtk/Decorated.xml
	* en/Gtk/Dialog.xml
	* en/Gtk/Drag.xml
	* en/Gtk/FSButton.xml
	* en/Gtk/FileSelection.xml
	* en/Gtk/Function.xml
	* en/Gtk/Gc.xml
	* en/Gtk/Grab.xml
	* en/Gtk/HandleBox.xml
	* en/Gtk/Input.xml
	* en/Gtk/InputDialog.xml
	* en/Gtk/Widget.xml
	* en/Gtk/Window.xml: Miscellaneous class docs.
	
2004-09-13 Shane Landrum <epicene@pobox.com>

	* en/Gtk/ClipboardClearFunc.xml
	* en/Gtk/ClipboardGetFunc.xml
	* en/Gtk/ClipboardTextReceivedFunc.xml