@@ -37,7 +37,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Do not use.</summary>
         <remarks>
         </remarks>
       </Docs>
@@ -50,7 +50,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Do not use.</summary>
         <remarks>
         </remarks>
       </Docs>
