@@ -7,8 +7,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>Delegate class for code to be run when a <see cref="T:Gdk.Pixbuf"/> object is destroyed.</summary>
+    <remarks/>
   </Docs>
   <Base>
     <BaseTypeName>System.Delegate</BaseTypeName>
