@@ -10,8 +10,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>Possible errors that can be thrown by a <see cref="T:Gdk.Pixbuf"/>.</summary>
+    <remarks/>
   </Docs>
   <Base>
     <BaseTypeName>System.Enum</BaseTypeName>
@@ -37,7 +37,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The image file is corrupt.</summary>
         <remarks>
         </remarks>
       </Docs>
@@ -50,7 +50,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>There is insufficient memory to hold this pixbuf data.</summary>
         <remarks>
         </remarks>
       </Docs>
@@ -63,7 +63,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>An invalid option was specified.</summary>
         <remarks>
         </remarks>
       </Docs>
@@ -76,7 +76,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The given file type is not allowed.</summary>
         <remarks>
         </remarks>
       </Docs>
@@ -89,7 +89,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The given operation is not supported.</summary>
         <remarks>
         </remarks>
       </Docs>
@@ -102,7 +102,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The operation failed.</summary>
         <remarks>
         </remarks>
       </Docs>
