@@ -11,7 +11,7 @@
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
     <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <remarks/>
   </Docs>
   <Base>
     <BaseTypeName>System.ValueType</BaseTypeName>
@@ -28,7 +28,7 @@
       <Parameters />
       <Docs>
         <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="New">
@@ -42,9 +42,9 @@
       </Parameters>
       <Docs>
         <summary>To be added</summary>
-        <param name="raw">To be added: an object of type 'IntPtr'</param>
-        <returns>To be added: an object of type 'Gdk.PixbufFrame'</returns>
-        <remarks>To be added</remarks>
+        <param name="raw">A <see cref="T:IntPtr"/></param>
+        <returns>A <see cref="T:Gdk.PixbufFrame"/></returns>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="revert">
@@ -57,9 +57,9 @@
       </Parameters>
       <Docs>
         <summary>To be added</summary>
-        <param name="value">To be added: an object of type 'Gdk.Pixbuf'</param>
-        <returns>To be added: an object of type 'Gdk.Pixbuf'</returns>
-        <remarks>To be added</remarks>
+        <param name="value">A <see cref="T:Gdk.Pixbuf"/></param>
+        <returns>A <see cref="T:Gdk.Pixbuf"/></returns>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="composited">
@@ -72,9 +72,9 @@
       </Parameters>
       <Docs>
         <summary>To be added</summary>
-        <param name="value">To be added: an object of type 'Gdk.Pixbuf'</param>
-        <returns>To be added: an object of type 'Gdk.Pixbuf'</returns>
-        <remarks>To be added</remarks>
+        <param name="value">A <see cref="T:Gdk.Pixbuf"/></param>
+        <returns>A <see cref="T:Gdk.Pixbuf"/></returns>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="pixbuf">
@@ -87,9 +87,9 @@
       </Parameters>
       <Docs>
         <summary>To be added</summary>
-        <param name="value">To be added: an object of type 'Gdk.Pixbuf'</param>
-        <returns>To be added: an object of type 'Gdk.Pixbuf'</returns>
-        <remarks>To be added</remarks>
+        <param name="value">A <see cref="T:Gdk.Pixbuf"/></param>
+        <returns>A <see cref="T:Gdk.Pixbuf"/></returns>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="XOffset">
@@ -102,7 +102,7 @@
       </Parameters>
       <Docs>
         <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="YOffset">
@@ -115,7 +115,7 @@
       </Parameters>
       <Docs>
         <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="DelayTime">
@@ -128,7 +128,7 @@
       </Parameters>
       <Docs>
         <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="Elapsed">
@@ -141,7 +141,7 @@
       </Parameters>
       <Docs>
         <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="Action">
@@ -154,7 +154,7 @@
       </Parameters>
       <Docs>
         <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="NeedRecomposite">
@@ -167,7 +167,7 @@
       </Parameters>
       <Docs>
         <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member>
     <Member MemberName="BgTransparent">
@@ -180,7 +180,7 @@
       </Parameters>
       <Docs>
         <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <remarks/>
       </Docs>
     </Member>
   </Members>
