@@ -1,3 +1,14 @@
+2004-10-11 Shane Landrum <epicene@pobox.com>
+
+	* en/Gdk/Pixbuf.xml
+	* en/Gdk/PixbufAlphaMode.xml
+	* en/Gdk/PixbufAniAnim.xml
+	* en/Gdk/PixbufAniAnimIter.xml
+	* en/Gdk/PixbufDestroyNotify.xml
+	* en/Gdk/PixbufError.xml
+	* en/Gdk/PixbufFormat.xml
+	* en/Gdk/PixbufFrame.xml: Miscellaneous docs for pixbuf classes.
+	
 2004-09-25 Shane Landrum <epicene@pobox.com>
 
 	* en/Gdk/Drawable.xml
